@@ -23,6 +23,9 @@ glide (2002.04.10.1-1) UNRELEASED; urgency=low
     - Remove now unused targets unpack and make-patch.
   * Refresh all patches with -pab.
   * Remove unused install.headers.glide2 target from debian/rules.
+  * Merge all binary-<pkg> targets into binary-arch.
+    - Add “-s” to debhelper commands.
+    - Add “-Nglide2-bin -Nglide3-bin” to the general dh_shlibdeps call.
 
  -- Guillem Jover <guillem@debian.org>  Mon, 09 Feb 2009 21:57:55 +0200
 
